adjusted code notes

--- a/Group3_Project1.ipynb
+++ b/Group3_Project1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,20 +376,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['ARREST_KEY', 'ARREST_DATE', 'PD_CD', 'PD_DESC', 'KY_CD', 'OFNS_DESC',\n",
-       "       'LAW_CODE', 'LAW_CAT_CD', 'ARREST_BORO', 'ARREST_PRECINCT',\n",
-       "       'JURISDICTION_CODE', 'AGE_GROUP', 'PERP_SEX', 'PERP_RACE', 'X_COORD_CD',\n",
-       "       'Y_COORD_CD', 'Latitude', 'Longitude'],\n",
-       "      dtype='object')"
+       "array(['FELONY ASSAULT', 'DANGEROUS DRUGS', 'RAPE', 'FORGERY', 'BURGLARY',\n",
+       "       'ARSON', 'ASSAULT 3 & RELATED OFFENSES', 'ROBBERY',\n",
+       "       'PETIT LARCENY', 'DANGEROUS WEAPONS', 'MISCELLANEOUS PENAL LAW',\n",
+       "       'HARRASSMENT 2', 'OFF. AGNST PUB ORD SENSBLTY &', 'JOSTLING',\n",
+       "       'SEX CRIMES', '(null)', 'FRAUDS', 'ESCAPE 3', \"BURGLAR'S TOOLS\",\n",
+       "       'VEHICLE AND TRAFFIC LAWS', 'OFFENSES AGAINST THE PERSON',\n",
+       "       'OFFENSES INVOLVING FRAUD', 'INTOXICATED & IMPAIRED DRIVING',\n",
+       "       'FOR OTHER AUTHORITIES', 'OTHER OFFENSES RELATED TO THEF',\n",
+       "       'POSSESSION OF STOLEN PROPERTY', 'OTHER TRAFFIC INFRACTION',\n",
+       "       'GRAND LARCENY', 'CRIMINAL MISCHIEF & RELATED OF',\n",
+       "       'OTHER STATE LAWS (NON PENAL LA',\n",
+       "       'PROSTITUTION & RELATED OFFENSES', 'GAMBLING', 'CRIMINAL TRESPASS',\n",
+       "       'OFFENSES AGAINST PUBLIC ADMINI', 'MURDER & NON-NEGL. MANSLAUGHTE',\n",
+       "       'OTHER STATE LAWS', 'CANNABIS RELATED OFFENSES',\n",
+       "       'NYS LAWS-UNCLASSIFIED FELONY', 'OFFENSES AGAINST PUBLIC SAFETY',\n",
+       "       'GRAND LARCENY OF MOTOR VEHICLE', 'UNAUTHORIZED USE OF A VEHICLE',\n",
+       "       'ADMINISTRATIVE CODE', 'OFFENSES RELATED TO CHILDREN',\n",
+       "       'THEFT-FRAUD', 'INTOXICATED/IMPAIRED DRIVING',\n",
+       "       'ANTICIPATORY OFFENSES', 'FRAUDULENT ACCOSTING',\n",
+       "       'THEFT OF SERVICES', 'ENDAN WELFARE INCOMP',\n",
+       "       'OTHER STATE LAWS (NON PENAL LAW)',\n",
+       "       'ALCOHOLIC BEVERAGE CONTROL LAW', 'MOVING INFRACTIONS',\n",
+       "       'DISORDERLY CONDUCT', 'KIDNAPPING & RELATED OFFENSES',\n",
+       "       'AGRICULTURE & MRKTS LAW-UNCLASSIFIED',\n",
+       "       'HOMICIDE-NEGLIGENT,UNCLASSIFIE', 'PARKING OFFENSES',\n",
+       "       'CHILD ABANDONMENT/NON SUPPORT', 'KIDNAPPING',\n",
+       "       'UNLAWFUL POSS. WEAP. ON SCHOOL', 'DISRUPTION OF A RELIGIOUS SERV',\n",
+       "       'HOMICIDE-NEGLIGENT-VEHICLE', 'FELONY SEX CRIMES',\n",
+       "       'ADMINISTRATIVE CODES'], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +423,7 @@
     "# List column names for arrests dataframe\n",
     "#-------------------------------\n",
     "\n",
-    "arrest_df.columns\n",
+    "arrest_df['OFNS_DESC'].unique()\n",
     "\n"
    ]
   },
@@ -552,7 +576,7 @@
     "\n",
     "\n",
     "#-------------------------------\n",
-    "# Show first five rows of dataframe\n",
+    "# Saved dataframe as a csv\n",
     "#-------------------------------\n",
     "super_clean_arrest_df.to_csv(\"Resources/NYC_Bor_Arrest.csv\", index=False, header=True, mode='a')\n",
     "super_clean_arrest_df.head()"
@@ -976,18 +1000,30 @@
     }
    ],
    "source": [
+    "#-------------------------------\n",
+    "# Renamed the zip column and changed the column's values to a string\n",
+    "#-------------------------------\n",
     "renamed_mf_df = super_clean_mf_df.rename(columns={' Program Zip': \"zip\"})\n",
-    "\n",
     "renamed_mf_df['zip']=renamed_mf_df['zip'].astype(str)\n",
-    "\n",
     "super_clean_zip_df['zip']=super_clean_zip_df['zip'].astype(str)\n",
     "\n",
+    "\n",
+    "#-------------------------------\n",
+    "# Merged Mental facility dataframe with zip code dataframe\n",
+    "#-------------------------------\n",
     "merged_mf_df = renamed_mf_df.merge(super_clean_zip_df, how=\"left\", on='zip')\n",
     "\n",
     "pd.set_option(\"display.max_columns\", None)\n",
     "\n",
+    "#-------------------------------\n",
+    "# Removed all empty rows with the boroughs column\n",
+    "#-------------------------------\n",
     "super_clean_merge_df=merged_mf_df.dropna(subset = ['borough'])\n",
     "\n",
+    "\n",
+    "#-------------------------------\n",
+    "# Saved dataframe as a csv\n",
+    "#-------------------------------\n",
     "super_clean_merge_df.to_csv(\"Resources/Ment_Fac_Bor.csv\", index=False, header=True, mode='a')\n",
     "super_clean_merge_df.head()"
    ]
