--- a/Merged_counts.ipynb
+++ b/Merged_counts.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -93,12 +93,16 @@
        "4  Staten Island          7415"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#-------------------------------\n",
+    "# Created a dataframe that sums up all arrest based on their borough\n",
+    "#-------------------------------\n",
+    "\n",
     "arrest_df.ARREST_BORO.unique()\n",
     "arrest_df['ARREST_BORO'] = arrest_df['ARREST_BORO'].replace(['B', 'K', 'M', 'Q', 'S'], ['Bronx', 'Brooklyn', 'Manhatten', 'Queens', 'Staten Island'])\n",
     "arrest_bor_df = arrest_df.groupby('ARREST_BORO')\n",
@@ -204,6 +208,10 @@
     }
    ],
    "source": [
+    "#-------------------------------\n",
+    "# Created a dataframe that sums up all mental health facilities based on their borough\n",
+    "#-------------------------------\n",
+    "\n",
     "MentFac_df.borough.unique()\n",
     "MentFac_df['borough'] = MentFac_df['borough'].replace(['Manhattan'], ['Manhatten'])\n",
     "Grouped_MentFac_df = MentFac_df.groupby('borough')\n",
@@ -294,6 +302,10 @@
     }
    ],
    "source": [
+    "#-------------------------------\n",
+    "# Merged the mental facility dataframe with the borough populations dataframe\n",
+    "#-------------------------------\n",
+    "\n",
     "MentFac_pop_df = pd.merge(MenFac_count_df, pop_df, on='Borough', how='outer')\n",
     "MentFac_pop_df = MentFac_pop_df.rename(columns={'Age':'Population'})\n",
     "MentFac_pop_df.head()"
@@ -459,6 +471,10 @@
     }
    ],
    "source": [
+    "#-------------------------------\n",
+    "# Merged the arrest count dataframe with the borough populations dataframe\n",
+    "#-------------------------------\n",
+    "\n",
     "arrest_pop_df = pd.merge(arrest_bor_count_df, pop_df, on='Borough', how='outer')\n",
     "arrest_pop_df.head()"
    ]
@@ -575,13 +591,30 @@
     }
    ],
    "source": [
+    "#-------------------------------\n",
+    "# Merged the arrest and mental health facility dataframes together\n",
+    "#-------------------------------\n",
+    "\n",
     "merged_arrest_mentfac_df = pd.merge(arrest_pop_df, MentFac_pop_df, on='Borough', how='outer')\n",
     "merged_arrest_mentfac_df = merged_arrest_mentfac_df[['Borough', 'Arrest Count', 'Population_x', 'Facility Count']]\n",
     "merged_arrest_mentfac_df = merged_arrest_mentfac_df.rename(columns={'Population_x':'Population'})\n",
     "\n",
+    "\n",
+    "#-------------------------------\n",
+    "# Created a new column for Crime Rate\n",
+    "#-------------------------------\n",
     "merged_arrest_mentfac_df['Crime Rate per 100,000'] = (merged_arrest_mentfac_df['Arrest Count'] / merged_arrest_mentfac_df['Population']) * 100000\n",
+    "\n",
+    "\n",
+    "#-------------------------------\n",
+    "# Created a new column for Facility Rate\n",
+    "#-------------------------------\n",
     "merged_arrest_mentfac_df['Facility Rate per 100,000'] = (merged_arrest_mentfac_df['Facility Count'] / merged_arrest_mentfac_df['Population']) * 100000\n",
-    "merged_arrest_mentfac_df['Crime per Facility'] = (merged_arrest_mentfac_df['Crime Rate per 100,000'] / merged_arrest_mentfac_df['Facility Count'])\n",
+    "\n",
+    "\n",
+    "#-------------------------------\n",
+    "# Rounded up Crime Rate to a whole number\n",
+    "#-------------------------------merged_arrest_mentfac_df['Crime per Facility'] = (merged_arrest_mentfac_df['Crime Rate per 100,000'] / merged_arrest_mentfac_df['Facility Count'])\n",
     "merged_arrest_mentfac_df['Crime Rate per 100,000'] = merged_arrest_mentfac_df['Crime Rate per 100,000'].round()\n",
     "merged_arrest_mentfac_df\n",
     "\n"
@@ -604,6 +637,10 @@
     }
    ],
    "source": [
+    "#-------------------------------\n",
+    "# Got the sum of all the arrests\n",
+    "#-------------------------------\n",
+    "\n",
     "total_arrest = merged_arrest_mentfac_df['Arrest Count'].sum()\n",
     "total_population"
    ]
@@ -626,7 +663,7 @@
    ],
    "source": [
     "#-------------------------------\n",
-    "# Borough Population\n",
+    "# Created a bar chart that shows total population for each Borough\n",
     "#-------------------------------\n",
     "merged_arrest_mentfac_df.plot(x='Borough', y='Population', kind='bar', figsize=(10,6))\n",
     "plt.xlabel('Borough')\n",
@@ -654,7 +691,7 @@
    ],
    "source": [
     "#-------------------------------\n",
-    "# Borough Arrest Count\n",
+    "# Created a bar chart that shows total arrest count for each Borough\n",
     "#-------------------------------\n",
     "merged_arrest_mentfac_df.plot(x='Borough', y='Arrest Count', kind='bar', color='red', figsize=(10,6))\n",
     "plt.xlabel('Borough')\n",
@@ -682,7 +719,7 @@
    ],
    "source": [
     "#-------------------------------\n",
-    "# Borough Mental Facility Crime\n",
+    "# Created a bar chart that shows the crime rate per facility within each Borough\n",
     "#-------------------------------\n",
     "merged_arrest_mentfac_df.plot(x='Borough', y='Crime per Facility', kind='bar', color='orange', figsize=(10,6))\n",
     "plt.xlabel('Borough')\n",
@@ -710,29 +747,13 @@
    ],
    "source": [
     "#-------------------------------\n",
-    "# Borough Mental Facility Count\n",
+    "# Created a bar chart that shows total number of mental health facilities for each Borough\n",
     "#-------------------------------\n",
     "merged_arrest_mentfac_df.plot(x='Borough', y='Facility Count', kind='bar', color='purple', figsize=(10,6))\n",
     "plt.xlabel('Borough')\n",
     "plt.ylabel('Facility Count')\n",
     "plt.title('Number of Facilities per Borough')\n",
     "plt.savefig('Resources/NYC_facility_bar.png', bbox_inches='tight')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#-------------------------------\n",
-    "# Crime Rate Per Facility in Boroughs\n",
-    "#-------------------------------\n",
-    "merged_arrest_mentfac_df.plot(x='Borough', y='Facility Count', kind='bar', color='green', figsize=(10,6))\n",
-    "plt.xlabel('Borough')\n",
-    "plt.ylabel('Facility Count')\n",
-    "plt.title('NYC Borough Mental Facility Count')\n",
     "plt.show()"
    ]
   },
@@ -898,6 +919,12 @@
     }
    ],
    "source": [
+    "#-------------------------------\n",
+    "# Created a chi-squared test to find out if we are going to be rejecting our hypothesis or the null hypothesis. This first chi squared test \\\n",
+    "# uses the total arrests for each borough as the observed value and then finds the expected value by finding the mental facility population percentage \\\n",
+    "# and then multiplies it by the total arrests value.\n",
+    "#-------------------------------\n",
+    "\n",
     "crime_chi_df = merged_arrest_mentfac_df.copy() \n",
     "\n",
     "# Observed data in a (hypothetical) survey of 6000 people \n",
@@ -1210,6 +1237,10 @@
     }
    ],
    "source": [
+    "#-------------------------------\n",
+    "# Created a chi-squared test to find out if we get similar results to the original test but this time using an evenly distributed amount of arrests for the expected values.\n",
+    "#-------------------------------\n",
+    "\n",
     "crime_chi_df = merged_arrest_mentfac_df.copy() \n",
     "\n",
     "# Observed data in a (hypothetical) survey of 6000 people \n",
