added readme analysis and maps

--- a/arret_types.ipynb
+++ b/arret_types.ipynb
@@ -224,11 +224,13 @@
    ],
    "source": [
     "#-------------------------------\n",
-    "# Dependencies and Setup\n",
+    "# Replace all Borough values with actual names instead of letters\n",
     "#-------------------------------\n",
-    "\n",
-    "arrest_df.ARREST_BORO.unique()\n",
     "arrest_df['ARREST_BORO'] = arrest_df['ARREST_BORO'].replace(['B', 'K', 'M', 'Q', 'S'], ['Bronx', 'Brooklyn', 'Manhatten', 'Queens', 'Staten Island'])\n",
+    "\n",
+    "#-------------------------------\n",
+    "# Renamed Borough column\n",
+    "#-------------------------------\n",
     "arrest_df = arrest_df.rename(columns={'ARREST_BORO':'Borough'})\n",
     "arrest_df.head()"
    ]
@@ -239,6 +241,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#-------------------------------\n",
+    "# Categorized all offenses into more broad categorizes\n",
+    "#-------------------------------\n",
+    "\n",
     "arrest_df['OFNS_DESC'] = arrest_df['OFNS_DESC'].replace(['FELONY ASSAULT', 'DANGEROUS DRUGS', 'RAPE', 'FORGERY', 'BURGLARY',\n",
     "       'ARSON', 'ASSAULT 3 & RELATED OFFENSES', 'ROBBERY',\n",
     "       'PETIT LARCENY', 'DANGEROUS WEAPONS', 'MISCELLANEOUS PENAL LAW',\n",
@@ -554,7 +560,9 @@
     }
    ],
    "source": [
-    "arrest_df['OFNS_DESC'].unique()\n",
+    "#-------------------------------\n",
+    "# Categorized all offenses into more broad categorizes\n",
+    "#-------------------------------\n",
     "arrest_count_df = arrest_df.groupby(['Borough', 'OFNS_DESC']).size().reset_index(name=\"Arrest Count\")\n",
     "clean_arrest_count=arrest_count_df[arrest_count_df['OFNS_DESC'] != '(null)']\n",
     "clean_arrest_count"
@@ -577,9 +585,15 @@
     }
    ],
    "source": [
+    "#-------------------------------\n",
+    "# Grouped all categories sums within their respective boroughs \n",
+    "#-------------------------------\n",
+    "\n",
     "crime_pivot = clean_arrest_count.pivot(index='Borough', columns='OFNS_DESC', values='Arrest Count')\n",
     "\n",
-    "# Plot a bar graph\n",
+    "#-------------------------------\n",
+    "# Created a bar chart that shows all the crime category sums by borough \n",
+    "#-------------------------------\n",
     "crime_pivot.plot(kind='bar', figsize=(12, 8))\n",
     "plt.title('Crime Distribution in Boroughs')\n",
     "plt.xlabel('Boroughs')\n",
@@ -664,6 +678,10 @@
     }
    ],
    "source": [
+    "#-------------------------------\n",
+    "# Created Facility count dataframe, grouped by borough, and renamed a few columns \n",
+    "#-------------------------------\n",
+    "\n",
     "MentFac_df.borough.unique()\n",
     "MentFac_df['borough'] = MentFac_df['borough'].replace(['Manhattan'], ['Manhatten'])\n",
     "Grouped_MentFac_df = MentFac_df.groupby('borough')\n",
